settings actions editor

--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -44,6 +44,16 @@
     <ClInclude Include="Actions.h">
       <DependentUpon>Actions.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="NewActions.h">
+      <DependentUpon>NewActions.xaml</DependentUpon>
+    </ClInclude>
+    <ClInclude Include="ArgsTemplateSelectors.h">
+      <DependentUpon>ArgsTemplateSelectors.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
+    <ClInclude Include="EditAction.h">
+      <DependentUpon>EditAction.xaml</DependentUpon>
+    </ClInclude>
     <ClInclude Include="AddProfile.h">
       <DependentUpon>AddProfile.xaml</DependentUpon>
     </ClInclude>
@@ -163,6 +173,12 @@
     <Page Include="Actions.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="NewActions.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="EditAction.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="AddProfile.xaml">
       <SubType>Designer</SubType>
     </Page>
@@ -228,6 +244,16 @@
   <ItemGroup>
     <ClCompile Include="Actions.cpp">
       <DependentUpon>Actions.xaml</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="NewActions.cpp">
+      <DependentUpon>NewActions.xaml</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="ArgsTemplateSelectors.cpp">
+      <DependentUpon>ArgsTemplateSelectors.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
+    <ClCompile Include="EditAction.cpp">
+      <DependentUpon>EditAction.xaml</DependentUpon>
     </ClCompile>
     <ClCompile Include="AddProfile.cpp">
       <DependentUpon>AddProfile.xaml</DependentUpon>
@@ -348,6 +374,17 @@
   <ItemGroup>
     <Midl Include="Actions.idl">
       <DependentUpon>Actions.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="NewActions.idl">
+      <DependentUpon>NewActions.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="ArgsTemplateSelectors.idl">
+      <SubType>Designer</SubType>
+    </Midl>
+    <Midl Include="EditAction.idl">
+      <DependentUpon>EditAction.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="AddProfile.idl">
