Add support for tmux control mode (#3656)

--- a/src/cascadia/TerminalConnection/TerminalConnection.vcxproj
+++ b/src/cascadia/TerminalConnection/TerminalConnection.vcxproj
@@ -32,6 +32,9 @@
     <ClInclude Include="EchoConnection.h">
       <DependentUpon>EchoConnection.idl</DependentUpon>
     </ClInclude>
+    <ClInclude Include="DummyConnection.h">
+      <DependentUpon>DummyConnection.idl</DependentUpon>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CTerminalHandoff.cpp" />
@@ -48,6 +51,9 @@
     <ClCompile Include="EchoConnection.cpp">
       <DependentUpon>EchoConnection.idl</DependentUpon>
     </ClCompile>
+    <ClCompile Include="DummyConnection.cpp">
+      <DependentUpon>DummyConnection.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="ConptyConnection.cpp">
       <DependentUpon>ConptyConnection.idl</DependentUpon>
     </ClCompile>
@@ -58,6 +64,7 @@
     <Midl Include="ITerminalConnection.idl" />
     <Midl Include="ConptyConnection.idl" />
     <Midl Include="EchoConnection.idl" />
+    <Midl Include="DummyConnection.idl" />
     <Midl Include="AzureConnection.idl" />
   </ItemGroup>
   <ItemGroup>
