Squashed commit of the following:
commit 8fbd5442be4f3c9220fbd5aca924ab42809f162b
Author: Dustin L. Howett <dustin@howett.net>
Date:   Wed Jun 4 18:12:19 2025 -0500

    Uncommentary

commit 8c08e0e74faa3be2b7896f53bf9475c89477c5b3
Author: Dustin L. Howett <dustin@howett.net>
Date:   Wed Jun 4 18:12:02 2025 -0500

    Commentary

commit b07bc3a48060eeacb120c0b5dd9f05bcf04d3563
Merge: b3615d598 155d8a9ab
Author: Dustin L. Howett <dustin@howett.net>
Date:   Wed Jun 4 18:04:14 2025 -0500

    Merge remote-tracking branch 'origin/main' into dev/duhowett/propagate-priority

commit b3615d59899bcb0882c0b2239e2f5e7119b162ab
Author: Dustin Howett <duhowett@microsoft.com>
Date:   Tue Aug 13 14:33:32 2024 -0500

    yott yeet

commit 596a17b5a1d0c9d0cceb263a1444ee221f35d7a7
Author: Dustin Howett <duhowett@microsoft.com>
Date:   Tue Aug 13 14:21:18 2024 -0500

    Yeet yott

Ensure that we have the right rights

Move to TerminalThemeHelpers

(cherry picked from commit 9670a53f8b92f08e67034704edd247a1f954643d)

--- a/src/cascadia/TerminalApp/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/TerminalAppLib.vcxproj
@@ -26,6 +26,7 @@
     <TerminalCppWinrt>true</TerminalCppWinrt>
     <TerminalMUX>true</TerminalMUX>
     <TerminalWinGetInterop>true</TerminalWinGetInterop>
+    <TerminalThemeHelpers>true</TerminalThemeHelpers>
   </PropertyGroup>
   <Import Project="..\..\..\common.openconsole.props" Condition="'$(OpenConsoleDir)'==''" />
   <Import Project="$(OpenConsoleDir)src\common.nugetversions.props" />
