--- a/src/cascadia/UIMarkdown/UIMarkdown.vcxproj
+++ b/src/cascadia/UIMarkdown/UIMarkdown.vcxproj
@@ -18,7 +18,7 @@
     -->
     <CppWinRTNamespaceMergeDepth>4</CppWinRTNamespaceMergeDepth>
     <XamlComponentResourceLocation>nested</XamlComponentResourceLocation>
-
+    <VersionInfoFileDescription>Windows Terminal Markdown Control Library</VersionInfoFileDescription>
   </PropertyGroup>
   <PropertyGroup Label="NuGet Dependencies">
     <TerminalCppWinrt>true</TerminalCppWinrt>
