WIP: Convert HighlightedTextControl to a templated control

--- a/src/cascadia/TerminalApp/TerminalAppLib.vcxproj
+++ b/src/cascadia/TerminalApp/TerminalAppLib.vcxproj
@@ -60,7 +60,8 @@
     <Page Include="TabHeaderControl.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="HighlightedTextControl.xaml">
+    <Page Include="HighlightedTextControlStyle.xaml">
+      <Type>DefaultStyle</Type>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="ColorPickupFlyout.xaml">
@@ -127,7 +128,7 @@
       <DependentUpon>TabHeaderControl.xaml</DependentUpon>
     </ClInclude>
     <ClInclude Include="HighlightedTextControl.h">
-      <DependentUpon>HighlightedTextControl.xaml</DependentUpon>
+      <DependentUpon>HighlightedTextControl.idl</DependentUpon>
     </ClInclude>
     <ClInclude Include="HighlightedText.h" />
     <ClInclude Include="ColorPickupFlyout.h">
@@ -247,7 +248,7 @@
       <DependentUpon>TabHeaderControl.xaml</DependentUpon>
     </ClCompile>
     <ClCompile Include="HighlightedTextControl.cpp">
-      <DependentUpon>HighlightedTextControl.xaml</DependentUpon>
+      <DependentUpon>HighlightedTextControl.idl</DependentUpon>
     </ClCompile>
     <ClCompile Include="HighlightedText.cpp" />
     <ClCompile Include="ColorPickupFlyout.cpp">
@@ -365,7 +366,6 @@
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="HighlightedTextControl.idl">
-      <DependentUpon>HighlightedTextControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="HighlightedText.idl" />
