Hax Move a huge bunch of the 'settings' types from Control to SettingsModel

--- a/src/cascadia/TerminalSettingsModel/Microsoft.Terminal.Settings.ModelLib.vcxproj
+++ b/src/cascadia/TerminalSettingsModel/Microsoft.Terminal.Settings.ModelLib.vcxproj
@@ -226,6 +226,7 @@
     <Midl Include="IAppearanceConfig.idl" />
     <Midl Include="ISettingsModelObject.idl" />
     <Midl Include="FontConfig.idl" />
+    <Midl Include="Types.idl" />
   </ItemGroup>
   <!-- ========================= Misc Files ======================== -->
   <ItemGroup>
