--- a/src/cppwinrt.build.pre.props
+++ b/src/cppwinrt.build.pre.props
@@ -77,7 +77,8 @@
     </ClCompile>
     <Link>
       <SubSystem Condition="'%(SubSystem)'==''">Console</SubSystem>
-      <GenerateWindowsMetadata Condition="'$(CppWinRTGenerateWindowsMetadata)'!='false'">true</GenerateWindowsMetadata>
+      <GenerateWindowsMetadata>$(CppWinRTGenerateWindowsMetadata)</GenerateWindowsMetadata>
+      <GenerateWindowsMetadata Condition="'%(GenerateWindowsMetadata)'==''">true</GenerateWindowsMetadata>
     </Link>
   </ItemDefinitionGroup>
 
