Update packages.config (#3)
Signed-off-by: AU_gdev_19 <64915515+Dargon789@users.noreply.github.com>

--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,9 +1,4 @@
-<?xml version="3.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="netstandard2.0" />
 </packages>
-<configuration>
-  <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-  </packageSources>
-</configuration>
