--- a/.github/workflows/build-round-cursor.yml
+++ b/.github/workflows/build-round-cursor.yml
@@ -16,29 +16,21 @@ jobs:
         shell: powershell
 
     steps:
-      # Step 1: Checkout your repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Setup NuGet (for restoring packages)
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1
+
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
 
-      # Step 3: Restore packages via MSBuild (slnx supported)
       - name: Restore NuGet packages
         run: msbuild OpenConsole.slnx /t:Restore /p:Configuration=Release /p:Platform=x64
 
-      # Step 4: Install Windows SDK components if needed (usually already on runner)
-      - name: Install Windows SDK (optional)
-        run: |
-          choco install windows-sdk-10.1 -y
-        continue-on-error: true
-
-      # Step 5: Build Microsoft Terminal
       - name: Build Terminal
         run: msbuild OpenConsole.slnx /p:Configuration=Release /p:Platform=x64 /m
 
-      # Step 6: Upload build artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
