--- a/.github/workflows/build-round-cursor.yml
+++ b/.github/workflows/build-round-cursor.yml
@@ -25,6 +25,17 @@ jobs:
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
 
+      # Retarget all projects to a Windows SDK that exists on the runner
+      - name: Retarget Windows SDK in all projects
+        run: |
+          $availableSDK = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\Include" | Sort-Object Name -Descending | Select-Object -First 1
+          if ($availableSDK -eq $null) { throw "No Windows SDK found on runner" }
+          $newSDK = $availableSDK.Name
+          Write-Host "Retargeting all projects to SDK version $newSDK"
+          Get-ChildItem -Recurse -Filter *.vcxproj | ForEach-Object {
+              (Get-Content $_.FullName) -replace '<WindowsTargetPlatformVersion>.*?</WindowsTargetPlatformVersion>', "<WindowsTargetPlatformVersion>$newSDK</WindowsTargetPlatformVersion>" | Set-Content $_.FullName
+          }
+
       - name: Restore NuGet packages
         run: msbuild OpenConsole.slnx /t:Restore /p:Configuration=Release /p:Platform=x64
 
